# cloudwash

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.stable  MANIFEST.in  README.md  catalog-info.yaml  cloudwash_openshift_buildconfig.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  settings.yaml.template  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  new_release.yml  pull_request.yml
Docs/: CONTRIBUTING.md  Run_cloudwash_locally.md  USER_GUIDE.md
assets/css/: reporting.css
cloudwash/: cli.py  client.py  config.py  constants.py  logger.py  utils.py
cloudwash/assets/css/: reporting.css
cloudwash/entities/: providers.py
cloudwash/entities/providers/: aws.py  base.py
cloudwash/entities/resources/: aws.py  base.py  containers.py  discs.py  images.py  nics.py  ocps.py  pips.py  stacks.py  vms.py
cloudwash/providers/: aws.py  azure.py  ec2.py  gce.py  podman.py  vmware.py
conf/: aws.yaml.template  azure.yaml.template  gce.yaml.template  vmware.yaml.template
