[metadata]
name = cloudwash
author = Jitendra Yejare
author_email = jyejare@redhat.com
description = The cloud resources cleanup utility
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.1
license = Apache license
url = https://github.com/RedHatQE/cloudwash
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: System :: Systems Administration

[options]
install_requires =
    wrapanapi
    dynaconf
    click
    wget
packages = find:

[options.entry_points]
console_scripts =
    swach = cloudwash.cli:cleanup_providers
