[metadata]
name = cloudwash
author = Jitendra Yejare
author_email = jyejare@redhat.com
description = The cloud resources cleanup utility
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache license
url = https://github.com/RedHatQE/cloudwash
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: System :: Systems Administration

[options]
install_requires =
    wrapanapi
    dynaconf
    click
    wget
    dominate
packages = find:

[options.extras_require]
setup =
    setuptools
    setuptools-scm
    wheel
    twine
dev =
    pre-commit
    flake8

[options.entry_points]
console_scripts =
    swach = cloudwash.cli:cleanup_providers
